tasksToPerform should not be static, ie shared